# scoutsignal

./: .gitignore  README.md  chats.example.yaml  config.example.yaml  pyproject.toml
extras/: README.md  com.scoutsignal.daily.plist  com.scoutsignal.example.plist  com.scoutsignal.two-slot-interval.example.plist  daily_two_slot.py  scoutsignal-git-checkin.sh  scoutsignal-run.sh
scripts/: diag-whatsapp-dom.py
src/scoutsignal/: __init__.py  cli.py  config_loader.py  engine.py  matcher.py  reporter.py  state.py  whatsapp.py
