[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoutsignal"
version = "0.1.3"
description = "Local WhatsApp Web chat monitor — job-style filters and email alerts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "playwright>=1.40.0",
  "pyyaml>=6.0.1",
  "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/HomeAgents/scoutsignal"
Repository = "https://github.com/HomeAgents/scoutsignal"
Issues = "https://github.com/HomeAgents/scoutsignal/issues"

[project.scripts]
scoutsignal = "scoutsignal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
